<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_purchases"
            android:icon="@drawable/ic_purchases"
            android:title="@string/menu_purchases" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_products"
            android:title="@string/menu_products" />
        <item
            android:id="@+id/nav_sales"
            android:icon="@drawable/ic_sales"
            android:title="@string/menu_sales" />
        <item
            android:id="@+id/nav_stock_management"
            android:icon="@drawable/ic_stock_management"
            android:title="@string/menu_stock_management" />
        <item
            android:id="@+id/nav_vendors"
            android:icon="@drawable/ic_vendors"
            android:title="@string/menu_vendors" />
        <item
            android:id="@+id/nav_customers"
            android:icon="@drawable/ic_customers"
            android:title="@string/menu_customers" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_reports"
            android:title="@string/menu_reports" />
    </group>
</menu>